Fix outline on link wrapping the logo so that is is not hitting the edges of the screen on smartphones.

--- a/src/scss/3_components/block/site-logo.scss
+++ b/src/scss/3_components/block/site-logo.scss
@@ -18,9 +18,12 @@
 
   a {
     @include link-state-style($link-site-logo);
-    display: block;
-    width: 100%;
-    height: 100%;
+    display: inline-block;
+    outline-offset: .6rem;
+
+    @include breakpoint($mob) {
+      outline-offset: 1.2rem;
+    }
   }
 }
 
